--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "use-persisted-state": "^0.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-responsive": "^8.0.2",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/use-persisted-state": "^0.3.0"
   }
 }
